--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "@tanstack/react-query": "^5.83.0",
     "axios": "^1.10.0",
     "axios-instance": "^0.0.18",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.0"
   },
   "devDependencies": {
